# rules_ml_toolchain

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel
cc/: BUILD  BUILD.bazel  constants.bzl
cc/config/: BUILD.bazel  llvm18_darwin_aarch64.BUILD  llvm18_linux_aarch64.BUILD  llvm18_linux_x86_64.BUILD  llvm21_linux_x86_64.BUILD  sysroot_darwin_aarch64.BUILD  sysroot_ubuntu18_aarch64.BUILD  sysroot_ubuntu18_x86_64.BUILD  sysroot_ubuntu18_x86_64_gcc9.BUILD  sysroot_ubuntu20_aarch64_gcc10.BUILD  sysroot_ubuntu20_x86_64_gcc10.BUILD  sysroot_ubuntu22_x86_64_gcc12.BUILD
cc/config/docker/sysroot_ubuntu18-x86_64/: Dockerfile
cc/config/docker/sysroot_ubuntu22-x86_64/: Dockerfile
cc/config/sysroot-dockerfiles/: sysroot_ubuntu18_x86_64.Dockerfile
cc/config/sysroot_aarch64_linux_glibc_2_27/: Dockerfile  create-sysroot.sh  sysroot_aarch64_ubuntu18.BUILD
cc/config/sysroot_aarch64_ubuntu18_gcc8.4/: Dockerfile  create-sysroot.sh  sysroot_aarch64_ubuntu18.BUILD
cc/config/sysroot_x86_64_linux_glibc_2_27/: sysroot_x86_64_ubuntu18.BUILD
cc/config/sysroot_x86_64_ubuntu18_gcc8.4/: Dockerfile  create-sysroot.sh  sysroot_x86_64_ubuntu18.BUILD
cc/features/: BUILD  BUILD.bazel  openmp_feature.bzl
cc/impls/cpu/: BUILD
cc/impls/cpu/darwin_aarch64_darwin_aarch64/: BUILD
cc/impls/cpu/linux_x86_64_darwin_aarch64/: BUILD
cc/impls/cpu/linux_x86_64_linux_aarch64/: BUILD
cc/impls/cpu/linux_x86_64_linux_x86_64/: BUILD
cc/impls/cuda/: BUILD  BUILD.bazel
cc/impls/cuda/linux_x86_64_linux_x86_64_cuda_delete_me/: BUILD.bazel
cc/impls/darwin_aarch64_darwin_aarch64/: BUILD
cc/impls/linux_aarch64_linux_aarch64/: BUILD
cc/impls/linux_aarch64_linux_aarch64_cuda/: BUILD
cc/impls/linux_x86_64_darwin_aarch64/: BUILD
cc/impls/linux_x86_64_linux_aarch64/: BUILD
cc/impls/linux_x86_64_linux_x86_64/: BUILD
cc/impls/linux_x86_64_linux_x86_64_cuda/: BUILD
cc/impls/linux_x86_64_linux_x86_64_sycl/: BUILD
cc/impls/linux_x86_64_linux_x86_64_sycl/features/: BUILD  rpath_feature.bzl
cc/impls/linux_x86_64_linux_x86_64_sycl/wrappers/: icpx_wrapper
cc/llvm/: llvm.bzl  llvm_linux.BUILD.tpl  llvm_linux_aarch64.BUILD.tpl  llvm_linux_x86_64.BUILD.tpl  sysroot.bzl  sysroot_linux.BUILD.tpl  version.bzl
cc/tests/cpu/: BUILD  hello_world.cc
cc/tests/gpu/: BUILD  nvptxcompiler_sample.cc
cc/tests/gpu/sycl/: BUILD  builtins_test.cc  vector_sycl.cc  vector_sycl.h  vector_sycl_test.cc
cc/wrappers/: BUILD
cc_toolchain/: BUILD  BUILD.bazel
cc_toolchain/config/: llvm19_linux_x86_64.BUILD  llvm_empty.BUILD  llvm_linux_x86_64.BUILD  sysroot_gromacs_ubuntu18_x86_64_gcc9.BUILD  sysroot_ubuntu18_x86_64.BUILD  sysroot_ubuntu18_x86_64_gcc9.BUILD  sysroot_x86_64_ubuntu18_gcc8.5.BUILD  sysroot_x86_64_ubuntu18_gcc9.1.BUILD  sysroot_x86_64_ubuntu18_gcc9.3.BUILD  sysroot_x86_64_ubuntu18_gcc9.5.BUILD  sysroot_x86_64_ubuntu18_gcc9.5_min.BUILD
cc_toolchain/cuda/features/: BUILD.bazel
cc_toolchain/features/: BUILD.bazel
cc_toolchain/impls/cpu/: BUILD
cc_toolchain/impls/cpu/darwin_aarch64_darwin_aarch64/: BUILD
cc_toolchain/impls/cpu/linux_x86_64_darwin_aarch64/: BUILD  BUILD.bazel
cc_toolchain/impls/cpu/linux_x86_64_linux_aarch64/: BUILD
cc_toolchain/impls/cpu/linux_x86_64_linux_x86_64/: BUILD  BUILD.bazel
cc_toolchain/impls/cpu/wrappers/: BUILD
cc_toolchain/impls/cuda/: BUILD.bazel
cc_toolchain/impls/cuda/linux_x86_64_linux_x86_64_cuda_delete_me/: BUILD.bazel
cc_toolchain/impls/cuda/wrappers/: BUILD
cc_toolchain/sysroots/darwin_aarch64/: README.md
cc_toolchain/wrappers/linux/: clang
common/: BUILD  tar_extraction_utils.bzl
gpu/: README.md  tools.bzl
gpu/cuda/: cuda_configure.bzl  enable_cuda_flag.bzl
gpu/nccl/: nccl_configure.bzl
gpu/sycl/: BUILD.tpl  build_defs.bzl.tpl  configure.bzl  dist_repo.bzl  level_zero.BUILD  oneapi.BUILD  oneapi_level_zero.BUILD  oneapi_zero_loader.BUILD  sycl.BUILD  sycl_configure.bzl  sycl_configure_backup.bzl  sycl_init_repository.bzl  sycl_redist_versions.bzl  zero_loader.BUILD
gpu/sycl/.tmp/: BUILD.DELETE  crosstool_wrapper_driver_sycl
gpu/sycl/cpp_non_hermetic/: BUILD.sycl.tpl
gpu/sycl/cpp_non_hermetic/wrappers/: crosstool_wrapper_driver_sycl.tpl
gpu/sycl/legacy/wrappers/: crosstool_wrapper_driver_sycl.tpl
