# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_toolchain")
load("//third_party/rules_cc_toolchain:toolchain_config.bzl", "cc_toolchain_config")
load("//third_party/rules_cc_toolchain/features:cc_toolchain_import.bzl", "cc_toolchain_import")

#=====================================================================
# Tools: Linux x86_64, Sysroot: Linux x86_64
#=====================================================================

toolchain(
    name = "linux_x86_64_linux_x86_64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_settings = [
        "//common:is_cuda_disabled",
        "//cc_toolchain/config:is_hermetic_cc_enabled",
    ],
    toolchain = "//cc_toolchain/impls/cpu:toolchain_linux_x86_64_linux_x86_64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

#---------------------------------------------------------------------------------------
# Tools: Linux x86_64, Sysroot: Linux x86_64, CUDA
#---------------------------------------------------------------------------------------

toolchain(
    name = "linux_x86_64_linux_x86_64_cuda",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        #"//cc_toolchain/config:cuda_enabled",
    ],
    target_settings = [
        "//common:is_cuda_enabled",
        "//cc_toolchain/config:is_hermetic_cc_enabled",
    ],
    toolchain = "//cc_toolchain/impls/cuda:toolchain_linux_x86_64_linux_x86_64_cuda",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: Linux x86_64, Sysroot: Linux aarch64
######################################################################

# buildifier: leave-alone
toolchain(
    name = "linux_x86_64_linux_aarch64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    target_settings = [
        "//common:is_cuda_disabled",
        "//cc_toolchain/config:is_hermetic_cc_enabled",
    ],
    toolchain = "//cc_toolchain/impls/cpu:toolchain_linux_x86_64_linux_aarch64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: Linux x86_64, Sysroot: macOS aarch64
######################################################################

MAC_TOOLS = {
    "gcc": "wrappers/darwin/clang",
    "cpp": "wrappers/darwin/clang++",
    "ld": "wrappers/darwin/ld",
    "ar": "wrappers/darwin/ar",
    "gcov": "wrappers/darwin/idler",
    "llvm-cov": "wrappers/darwin/idler",
    "nm": "wrappers/darwin/idler",
    "objdump": "wrappers/darwin/idler",
    "strip": "wrappers/darwin/idler",
}

alias(
    name = "startup_libs_darwin_aarch64",
    actual = "@sysroot_darwin_aarch64//:startup_libs",
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_linux_x86_64_darwin_aarch64",
    deps = [
        "@sysroot_darwin_aarch64//:includes_c",
        "@llvm_linux_x86_64//:includes",
        "@sysroot_darwin_aarch64//:includes_system",
        "@sysroot_darwin_aarch64//:glibc",
        "@sysroot_darwin_aarch64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_linux_x86_64_darwin_aarch64",
    srcs = [
        ":imports_linux_x86_64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_darwin_aarch64",
        "@llvm_linux_x86_64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_linux_x86_64_darwin_aarch64",
    srcs = [
        ":all_linux_x86_64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:clang",
        "@llvm_linux_x86_64//:clang++",
        "@llvm_linux_x86_64//:distro_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_linux_x86_64_darwin_aarch64",
    srcs = [
        ":compiler_linux_x86_64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ld",
        "@sysroot_darwin_aarch64//:startup_libs",
        "@llvm_linux_x86_64//:distro_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_linux_x86_64_darwin_aarch64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_linux_x86_64//:ar_darwin",
        "@llvm_linux_x86_64//:distro_libs",
    ],
)

cc_toolchain(
    name = "toolchain_linux_x86_64_darwin_aarch64",
    all_files = ":all_linux_x86_64_darwin_aarch64",
    ar_files = ":ar_linux_x86_64_darwin_aarch64",
    compiler_files = ":compiler_linux_x86_64_darwin_aarch64",
    dwp_files = ":all_linux_x86_64_darwin_aarch64",
    linker_files = ":linker_linux_x86_64_darwin_aarch64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_linux_x86_64_darwin_aarch64",
    toolchain_identifier = "toolchain_id_linux_x86_64_darwin_aarch64",
)

cc_toolchain_config(
    name = "toolchain_config_linux_x86_64_darwin_aarch64",
    archiver = "@llvm_linux_x86_64//:ar_darwin",
    c_compiler = "@llvm_linux_x86_64//:clang",
    cc_compiler = "@llvm_linux_x86_64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//third_party/rules_cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_linux_x86_64_darwin_aarch64",
        "//third_party/rules_cc_toolchain/features:undefined_symbols",

        # Toolchain configuration
        "//third_party/rules_cc_toolchain/features:warnings",
        "//third_party/rules_cc_toolchain/features:errors",
        "//third_party/rules_cc_toolchain/features:reproducible",
        "//third_party/rules_cc_toolchain/features:language",
        "//third_party/rules_cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_darwin_aarch64",
        "//cc_toolchain/features:startup_libs_darwin_aarch64",
        "//third_party/rules_cc_toolchain/features:coverage",
        "//cc_toolchain/features:max_install_names",
        "//cc_toolchain/features:no_elaborated_enum_base",

        # PIC / PIE flags
        "//third_party/rules_cc_toolchain/features:supports_pic",
        "//third_party/rules_cc_toolchain/features:position_independent_code",

        # Optimization flags
        "//cc_toolchain/features:garbage_collect_symbols_mac",
        "//cc_toolchain/features:constants_merge",
        "//cc_toolchain/features:asserts_disable",
        "//third_party/rules_cc_toolchain/features:dbg",
        "//third_party/rules_cc_toolchain/features:opt",
        "//cc_toolchain/features:detect_issues",

        # C++ standard configuration
        "//third_party/rules_cc_toolchain/features:c++11",
        "//third_party/rules_cc_toolchain/features:c++14",
        "//third_party/rules_cc_toolchain/features:c++17",

        #
        "//cc_toolchain/features:allow_shlib_undefined",
        "//cc_toolchain/features:supports_dynamic_linker",
        "//cc_toolchain/features:supports_start_end_lib_feature",
    ],
    dynamic_library_extension = ".dylib",
    install_name = "@llvm_linux_x86_64//:install_name_tool_darwin",
    linker = "@llvm_linux_x86_64//:ld",
    target_cpu = "aarch64",
    target_libc = "macosx",
    target_system_name = "local",
    tool_paths = MAC_TOOLS,
)

# buildifier: leave-alone
toolchain(
    name = "linux_x86_64_darwin_aarch64",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_settings = [
        "//common:is_cuda_disabled",
        "//cc_toolchain/config:is_hermetic_cc_enabled",
    ],
    toolchain = ":toolchain_linux_x86_64_darwin_aarch64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

######################################################################
# Tools: macOS aarch64, Sysroot: macOS aarch64
######################################################################

# buildifier: leave-alone
cc_toolchain_import(
    name = "imports_darwin_aarch64_darwin_aarch64",
    deps = [
        "@sysroot_darwin_aarch64//:includes_c",
        "@llvm_darwin_aarch64//:includes",
        "@sysroot_darwin_aarch64//:includes_system",
        "@sysroot_darwin_aarch64//:glibc",
        "@sysroot_darwin_aarch64//:pthread",
    ],
    visibility = ["//visibility:public"],
)

# buildifier: leave-alone
filegroup(
    name = "all_darwin_aarch64_darwin_aarch64",
    srcs = [
        ":imports_darwin_aarch64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "//cc_toolchain/features:startup_libs_darwin_aarch64",
        "@llvm_darwin_aarch64//:all",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "compiler_darwin_aarch64_darwin_aarch64",
    srcs = [
        ":all_darwin_aarch64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "@llvm_darwin_aarch64//:clang",
        "@llvm_darwin_aarch64//:clang++",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "linker_darwin_aarch64_darwin_aarch64",
    srcs = [
        ":compiler_darwin_aarch64_darwin_aarch64",
        "//cc_toolchain/wrappers:all",
        "@llvm_darwin_aarch64//:ld",
        "@sysroot_darwin_aarch64//:startup_libs",
    ],
)

# buildifier: leave-alone
filegroup(
    name = "ar_darwin_aarch64_darwin_aarch64",
    srcs = [
        "//cc_toolchain/wrappers:all",
        "@llvm_darwin_aarch64//:ar",
    ],
)

cc_toolchain(
    name = "toolchain_darwin_aarch64_darwin_aarch64",
    all_files = ":all_darwin_aarch64_darwin_aarch64",
    ar_files = ":ar_darwin_aarch64_darwin_aarch64",
    compiler_files = ":compiler_darwin_aarch64_darwin_aarch64",
    dwp_files = ":all_darwin_aarch64_darwin_aarch64",
    linker_files = ":linker_darwin_aarch64_darwin_aarch64",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":toolchain_config_darwin_aarch64_darwin_aarch64",
    toolchain_identifier = "toolchain_id_darwin_aarch64_darwin_aarch64",
)

cc_toolchain_config(
    name = "toolchain_config_darwin_aarch64_darwin_aarch64",
    archiver = "@llvm_darwin_aarch64//:ar",
    c_compiler = "@llvm_darwin_aarch64//:clang",
    cc_compiler = "@llvm_darwin_aarch64//:clang++",
    compiler_features = [
        # Hermetic libraries feature required before import.
        "//third_party/rules_cc_toolchain/features:hermetic_libraries",
        "//cc_toolchain/features:toolchain_import_darwin_aarch64_darwin_aarch64",
        "//third_party/rules_cc_toolchain/features:undefined_symbols",

        # Toolchain configuration
        "//third_party/rules_cc_toolchain/features:warnings",
        "//third_party/rules_cc_toolchain/features:errors",
        "//third_party/rules_cc_toolchain/features:reproducible",
        "//third_party/rules_cc_toolchain/features:language",
        "//third_party/rules_cc_toolchain/features:use_lld",
        "//cc_toolchain/features:sysroot_darwin_aarch64",
        "//cc_toolchain/features:startup_libs_darwin_aarch64",
        "//third_party/rules_cc_toolchain/features:coverage",
        "//cc_toolchain/features:max_install_names",
        "//cc_toolchain/features:no_elaborated_enum_base",

        # PIC / PIE flags
        "//third_party/rules_cc_toolchain/features:supports_pic",
        "//third_party/rules_cc_toolchain/features:position_independent_code",

        # Optimization flags
        "//cc_toolchain/features:garbage_collect_symbols_mac",
        "//cc_toolchain/features:constants_merge",
        "//cc_toolchain/features:asserts_disable",
        "//third_party/rules_cc_toolchain/features:dbg",
        "//third_party/rules_cc_toolchain/features:opt",
        "//cc_toolchain/features:detect_issues",

        # C++ standard configuration
        "//third_party/rules_cc_toolchain/features:c++11",
        "//third_party/rules_cc_toolchain/features:c++14",
        "//third_party/rules_cc_toolchain/features:c++17",

        #
        "//cc_toolchain/features:allow_shlib_undefined",
        "//cc_toolchain/features:supports_dynamic_linker",
        "//cc_toolchain/features:supports_start_end_lib_feature",
    ],
    dynamic_library_extension = ".dylib",
    install_name = "@llvm_darwin_aarch64//:install_name_tool_darwin",
    linker = "@llvm_darwin_aarch64//:ld",
    target_cpu = "aarch64",
    target_libc = "macosx",
    target_system_name = "local",
    tool_paths = MAC_TOOLS,
)

# buildifier: leave-alone
toolchain(
    name = "darwin_aarch64_darwin_aarch64",
    exec_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
    target_settings = [
        "//common:is_cuda_disabled",
        "//cc_toolchain/config:is_hermetic_cc_enabled",
    ],
    toolchain = ":toolchain_darwin_aarch64_darwin_aarch64",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
